--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Yesteryear&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/favicon.png">
     <audio controls autoplay loop>
-        <source src="https://dl.jeremylee.sh/Music/OPUS_VBR/Playlists/what.png/44%20-%20The%20Beatles%20-%20Blackbird.ogg" type="audio/ogg">
-        <embed src="https://dl.jeremylee.sh/Music/OPUS_VBR/Playlists/what.png/44%20-%20The%20Beatles%20-%20Blackbird.ogg" autostart="true" loop="true" hidden="true"> 
+        <source src="Blackbird.ogg" type="audio/ogg">
+        <embed src="Blackbird.ogg" autostart="true" loop="true" hidden="true"> 
             
       </audio>
 
