--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Beatles #3</title>
     <link rel="stylesheet" href="Styles.css">
     <link href="https://fonts.googleapis.com/css?family=Yesteryear&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <audio controls autoplay loop>
         <source src="Blackbird.ogg" type="audio/ogg">
         <embed src="Blackbird.ogg" autostart="true" loop="true" hidden="true"> 
