--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Beatles #3</title>
     <link rel="stylesheet" href="Styles.css">
     <link href="https://fonts.googleapis.com/css?family=Yesteryear&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <audio controls autoplay loop>
-        <source src="Blackbird.ogg" type="audio/ogg">
-        <embed src="Blackbird.ogg" autostart="true" loop="true" hidden="true"> 
+        <source src="https://dl.jeremylee.sh/Music/OPUS_VBR/Playlists/what.png/44%20-%20The%20Beatles%20-%20Blackbird.ogg" type="audio/ogg">
+        <embed src="https://dl.jeremylee.sh/Music/OPUS_VBR/Playlists/what.png/44%20-%20The%20Beatles%20-%20Blackbird.ogg" autostart="true" loop="true" hidden="true"> 
             
       </audio>
 
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <img class="firstpic" src="homepic.jpg" alt="beatles walking">
+        <img class="firstpic" src="/homepic.jpg" alt="beatles walking">
 
         <H3 id=integrantes>Integrantes</H3>
         <ul>
