--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </div>
 
-        <img class="firstpic" src="/homepic.jpg" alt="beatles walking">
+        <img class="firstpic" src="homepic.jpg" alt="beatles walking">
 
         <H3 id=integrantes>Integrantes</H3>
         <ul>
