--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beatles #3</title>
     <link rel="stylesheet" href="Styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Yesteryear&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300i,400,400i,700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="/favicon.png">
     <audio controls autoplay loop>
         <source src="https://dl.jeremylee.sh/Music/OPUS_VBR/Playlists/what.png/44%20-%20The%20Beatles%20-%20Blackbird.ogg" type="audio/ogg">
-        <embed src="https://dl.jeremylee.sh/Music/OPUS_VBR/Playlists/what.png/44%20-%20The%20Beatles%20-%20Blackbird.ogg" autostart="true" loop="true" hidden="true"> 
+        <embed src="https://dl.jeremylee.sh/Music/OPUS_VBR/Playlists/what.png/44%20-%20The%20Beatles%20-%20Blackbird.ogg" autostart="true" hidden="true"> 
             
       </audio>
+    <link name="Bootle" rel="fonts" href="Bootle.TTF">
 
 </head>
 
@@ -43,7 +44,7 @@
             </div>
         </div>
 
-        <img class="firstpic" src="homepic.jpg" alt="beatles walking">
+        <img class="firstpic" src="/homepic.jpg" alt="beatles walking">
 
         <H3 id=integrantes>Integrantes</H3>
         <ul>
