--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <img class="firstpic" src="homepic.jpg" alt="beatles jumping">
+        <img class="firstpic" src="https://raw.githubusercontent.com/federicocapucci/favband/master/mainpic.jpg" alt="beatles jumping">
 
         <H3 id=integrantes>Integrantes</H3>
         <ul>
