--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Beatles #3</title>
     <link rel="stylesheet" href="Styles.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300i,400,400i,700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <audio controls autoplay loop>
         <source src="https://dl.jeremylee.sh/Music/OPUS_VBR/Playlists/what.png/44%20-%20The%20Beatles%20-%20Blackbird.ogg" type="audio/ogg">
         <embed src="https://dl.jeremylee.sh/Music/OPUS_VBR/Playlists/what.png/44%20-%20The%20Beatles%20-%20Blackbird.ogg" autostart="true" hidden="true"> 
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <img class="firstpic" src="https://raw.githubusercontent.com/federicocapucci/favband/master/mainpic.jpg" alt="beatles jumping">
+        <img class="firstpic" src="homepic.jpg" alt="beatles walking">
 
         <H3 id=integrantes>Integrantes</H3>
         <ul>
